Adding readme file
Adding the readme file that describes the overview of the application.

--- a/Example/UartDMA/ARM/UartDMA.uvprojx
+++ b/Example/UartDMA/ARM/UartDMA.uvprojx
@@ -549,6 +549,16 @@
           </Files>
         </Group>
         <Group>
+          <GroupName>documents</GroupName>
+          <Files>
+            <File>
+              <FileName>readme.txt</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\readme.txt</FilePath>
+            </File>
+          </Files>
+        </Group>
+        <Group>
           <GroupName>::Board Support</GroupName>
         </Group>
         <Group>
